--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
 @use '../../styles/mixins' as *;
 
 .footer {
+  position: relative;
+  z-index: 1;
   padding: 40px 0 24px;
   border-top: 1px solid var(--border-subtle);
 
